--- a/Chow/single.html
+++ b/Chow/single.html
@@ -124,8 +124,8 @@
 
           <p>By following these tips, you can make your noodles taste even better and more flavorful. Enjoy!</p>
 
-          
-        <!--  <div class="pt-5">
+
+          <!--  <div class="pt-5">
             <p>Categories: <a href="#">Design</a>, <a href="#">Events</a> Tags: <a href="#">#html</a>, <a
                 href="#">#trends</a></p>
           </div> --> <br>
@@ -138,10 +138,10 @@
                 </div>
                 <div class="comment-body">
                   <h3>Ankit</h3>
-                  <div class="meta">January 9, 2018 at 2:21pm</div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus,
-                    ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum
-                    impedit necessitatibus, nihil?</p>
+                  <div class="meta">January 9, 2023 at 2:21pm</div>
+                  <p>"The noodles are simply amazing. They are perfectly cooked and the sauces are
+                    full of flavor. I especially love the handmade noodles, which are unlike anything I've ever tasted
+                    before."</p>
                   <p><a href="#" class="reply">Reply</a></p>
                 </div>
               </li>
@@ -151,10 +151,10 @@
                 </div>
                 <div class="comment-body">
                   <h3>Shresta</h3>
-                  <div class="meta">January 9, 2018 at 2:21pm</div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus,
-                    ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum
-                    impedit necessitatibus, nihil?</p>
+                  <div class="meta">January 9, 2023 at 2:21pm</div>
+                  <p>"I appreciate the attention to detail at CHOW. The noodles are cooked to perfection
+                    and the toppings are carefully selected to create a well-balanced dish. And the prices are very
+                    reasonable, considering the quality of the food."</p>
                   <p><a href="#" class="reply">Reply</a></p>
                 </div>
                 <ul class="children">
@@ -164,10 +164,10 @@
                     </div>
                     <div class="comment-body">
                       <h3>Chetan Patel</h3>
-                      <div class="meta">January 9, 2018 at 2:21pm</div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum
-                        necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure!
-                        Quam voluptas earum impedit necessitatibus, nihil?</p>
+                      <div class="meta">January 9, 2023 at 2:21pm</div>
+                      <p>Thank you for taking the time to share your feedback with us. We're thrilled to hear that you
+                        enjoyed your experience at CHOW and that our noodles lived up to your expectations.
+                      </p>
                       <p><a href="#" class="reply">Reply</a></p>
                     </div>
                     <ul class="children">
@@ -177,10 +177,10 @@
                         </div>
                         <div class="comment-body">
                           <h3>Dheeraj</h3>
-                          <div class="meta">January 9, 2018 at 2:21pm</div>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum
-                            necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste
-                            iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                          <div class="meta">January 9, 2023 at 2:21pm</div>
+                          <p>"The service at CHOW is exceptional. The staff is friendly, knowledgeable, and
+                            always willing to provide recommendations. And the noodles are always served piping hot and
+                            fresh."</p>
                           <p><a href="#" class="reply">Reply</a></p>
                         </div>
                         <ul class="children">
@@ -190,10 +190,10 @@
                             </div>
                             <div class="comment-body">
                               <h3>Beena</h3>
-                              <div class="meta">January 9, 2018 at 2:21pm</div>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum
-                                necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste
-                                iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                              <div class="meta">January 9, 2023 at 2:21pm</div>
+                              <p>"I tried [Restaurant Name] for the first time last night and it was one of the best
+                                meals I've ever had. The flavors were incredible, and the presentation was beautiful. I
+                                can't wait to come back and try more dishes on the menu."</p>
                               <p><a href="#" class="reply">Reply</a></p>
                             </div>
                           </li>
@@ -209,10 +209,10 @@
                 </div>
                 <div class="comment-body">
                   <h3>Prachi</h3>
-                  <div class="meta">January 9, 2018 at 2:21pm</div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus,
-                    ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum
-                    impedit necessitatibus, nihil?</p>
+                  <div class="meta">January 9, 2023 at 2:21pm</div>
+                  <p>"The noodle bowls at CHOW are my new favorite comfort food. The broths are rich and
+                    flavorful, and the toppings are fresh and colorful. And the ambiance of the restaurant is cozy and
+                    inviting, making it the perfect place to enjoy a warm bowl of noodles on a cold day."</p>
                   <p><a href="#" class="reply">Reply</a></p>
                 </div>
               </li>
@@ -264,11 +264,11 @@
           <div class="sidebar-box">
             <div class="categories">
               <h3>Categories</h3>
-              <li><a href="#">Creatives <span>(12)</span></a></li>
-              <li><a href="#">Blogs <span>(22)</span></a></li>
-              <li><a href="#">Design <span>(37)</span></a></li>
-              <li><a href="#">HTML <span>(42)</span></a></li>
-              <li><a href="#">Web Development <span>(14)</span></a></li>
+              <li><a href="#">Indian Thali <span>(12)</span></a></li>
+              <li><a href="#">Chinese <span>(22)</span></a></li>
+              <li><a href="#">Japanese <span>(37)</span></a></li>
+              <li><a href="#">Beverages <span>(42)</span></a></li>
+              <li><a href="#">Tandoori (special) <span>(14)</span></a></li>
             </div>
           </div>
           <div class="sidebar-box">
