--- a/Chow/single.html
+++ b/Chow/single.html
@@ -87,7 +87,7 @@
           <p class="lead"></p>
           <p><img src="img/noodles.jpg" alt="Image" class="img-fluid rounded"></p>
           <h3 class="mb-4">If you want to make your noodles taste even better, here are some tips to make them more
-            flavorful.</h3>
+            flavorful</h3>
           <blockquote>
             <h4 class="mb-4">Use a flavorful broth:</h4>
             <p>If you're making a soup-based noodle dish, use a flavorful broth as your base. You
@@ -254,11 +254,11 @@
             </form>
           </div>
           <div class="sidebar-box">
-            <img src="img/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4 w-50 rounded-circle">
+            <img src="img/Dummy-Frau.jpg" alt="Image placeholder" class="img-fluid mb-4 w-50 rounded-circle">
             <h3>About The Author</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate
-              quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos
-              fugit cupiditate numquam!</p>
+            <p>Our chef has trained in some of the world's finest kitchens and has a deep understanding of a wide range
+              of cuisines. He works tirelessly to source the freshest and highest quality ingredients, carefully
+              crafting each dish to ensure that it is a work of art.</p>
             <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
           </div>
           <div class="sidebar-box">
@@ -268,14 +268,14 @@
               <li><a href="#">Chinese <span>(22)</span></a></li>
               <li><a href="#">Japanese <span>(37)</span></a></li>
               <li><a href="#">Beverages <span>(42)</span></a></li>
-              <li><a href="#">Tandoori (special) <span>(14)</span></a></li>
+              <li><a href="#">Biryani (special) <span>(14)</span></a></li>
             </div>
           </div>
           <div class="sidebar-box">
-            <h3>Paragraph</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate
-              quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos
-              fugit cupiditate numquam!</p>
+            <h3>Additionals</h3>
+            <p>Whether you're joining us for a romantic dinner for two, a family celebration, or a business lunch, we
+              strive to provide an exceptional dining experience for every guest. Our friendly staff is always on hand
+              to ensure that you feel welcome and comfortable throughout your visit.</p>
           </div>
         </div>
       </div>
