--- a/Chow/single.html
+++ b/Chow/single.html
@@ -83,17 +83,18 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 blog-content">
-          <h3 class="mb-4">The most delicious way to cook Noodles is</h3>
-          <p class="lead"></p>
-          <p><img src="img/noodles.jpg" alt="Image" class="img-fluid rounded"></p>
           <h3 class="mb-4">If you want to make your noodles taste even better, here are some tips to make them more
             flavorful</h3>
+          <p class="lead"></p>
+          <p><img src="img/noodles.jpg" alt="Image" class="img-fluid rounded"></p>
+          
           <blockquote>
+          </blockquote>
             <h4 class="mb-4">Use a flavorful broth:</h4>
             <p>If you're making a soup-based noodle dish, use a flavorful broth as your base. You
               can use chicken or vegetable broth or add spices like ginger, garlic, and chili flakes to enhance the
               flavor.</p>
-          </blockquote>
+          
 
           <h4 class="mb-4">Add vegetables:</h4>
 
@@ -245,14 +246,14 @@
           </div>
         </div>
         <div class="col-lg-4 sidebar pl-lg-5">
-          <div class="sidebar-box">
+         <!-- <div class="sidebar-box">
             <form action="#" class="search-form">
               <div class="form-group">
                 <span class="icon fa fa-search"></span>
                 <input type="text" class="form-control form-control-lg" placeholder="Type a keyword and hit enter">
               </div>
             </form>
-          </div>
+          </div> -->
           <div class="sidebar-box">
             <img src="img/Dummy-Frau.jpg" alt="Image placeholder" class="img-fluid mb-4 w-50 rounded-circle">
             <h3>About The Author</h3>
