--- a/Chow/blog-2.html
+++ b/Chow/blog-2.html
@@ -89,8 +89,7 @@
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking Biryani is a simple process that can be done in a few easy steps. Here's how to cook biryani</p>
               <p><a href="single.html" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
@@ -103,8 +102,7 @@
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking noodles is a simple process that can be done in a few easy steps. Here's how to cook noodles</p>
               <p><a href="single.html" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
@@ -117,8 +115,7 @@
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking Vermicelli is a simple process that can be done in a few easy steps. Here's how to cook vermicelli</p>
               <p><a href="single.html" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
@@ -131,8 +128,7 @@
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking Pasta is a simple process that can be done in a few easy steps. Here's how to cook pasta</p>
               <p><a href="single.html" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
@@ -141,12 +137,11 @@
           <div class="blog d-block">
             <a class="bg-image d-block" href="single.html" style="background-image: url('img/chicken.jpg');"></a>
             <div class="text">
-              <h3><a href="single.html">How To Cook chicken?</a></h3>
+              <h3><a href="single.html">How To Cook Chicken?</a></h3>
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking chicken is a simple process that can be done in a few easy steps. Here's how to cook chicken</p>
               <p><a href="single.html" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
@@ -159,8 +154,7 @@
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking Meals is a simple process that can be done in a few easy steps. Here's how to cook meals</p>
               <p><a href="single.html" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
