--- a/Chow/blog.html
+++ b/Chow/blog.html
@@ -92,8 +92,7 @@
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking noodles is a simple process that can be done in a few easy steps. Here's how to cook noodles</p>
               <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
@@ -106,8 +105,7 @@
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking french fries is a simple process that can be done in a few easy steps. Here's how to cook french ries</p>
               <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
