--- a/Chow/index.html
+++ b/Chow/index.html
@@ -225,7 +225,7 @@
             <div class="text order-1">
               <h3>Grilled Caesar salad, shaved reggiano</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">₹12.00</p>
+              <p class="text-primary h3">₹120.00</p>
             </div>
           </div>
           <div class="sched d-block d-lg-flex">
@@ -373,14 +373,14 @@
       <div class="row">
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
           <div class="blog d-block">
-            <a class="bg-image d-block" href="single.html" style="background-image: url('img/dishes_1.jpg');"></a>
+            <a class="bg-image d-block" href="single.html" style="background-image: url('img/noocles-1.jpg');"></a>
             <div class="text">
-              <h3><a href="single.html">How To Cook Pasta?</a></h3>
+              <h3><a href="single.html">How To Cook Noodles?</a></h3>
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking noodles is a simple process that can be done in a few easy steps. Here's how to cook noodles
+              </p>
               <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
@@ -393,8 +393,8 @@
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Cooking Pasta is a simple process that can be done in a few easy steps. Here's how to cook pasta
+              </p>
               <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
             </div>
           </div>
