--- a/Chow/about.html
+++ b/Chow/about.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from preview.colorlib.com/theme/foody/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Mar 2023 10:05:43 GMT -->
 
 <head>
-  <title>CHOW &mdash; </title>
+  <title>CHOW &ndash;About us </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
