--- a/Chow/services.html
+++ b/Chow/services.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from preview.colorlib.com/theme/foody/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Mar 2023 10:05:43 GMT -->
 
 <head>
-  <title>CHOW &mdash; </title>
+  <title>CHOW &ndash;Our Services </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
-            <h1 data-aos="fade-up">CHOW Services</h1>
+            <h1 data-aos="fade-up">Our Services</h1>
             <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing
               elit. Sapiente et sed quasi.</p>
             <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-white btn-outline-white">Get
