--- a/nxtecs/ae.html
+++ b/nxtecs/ae.html
@@ -27,7 +27,7 @@
 
 
     <link rel="icon" type="image/x-icon" href="assets/img/4x/Website_Logo.png">
-    <title>AEM || Nxtecs</title>
+    <title>AEM || Learntec</title>
 </head>
 
 <body>
@@ -37,9 +37,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
-                        <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
-                                    alt="" /></a>
+                        <div class="logo" style="font-size: x-large; color: #002356;">
+                            <a href="index.html"><!--<img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="LEARNTEC" />--> LEARNTEC</a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -101,9 +100,9 @@
 
         <!-- offset-sidebar start -->
         <div class="offset-sidebar">
-            <div class="offset-widget offset-logo mb-30">
-                <a href="index.html">
-                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
+            <div class="offset-widget offset-logo mb-30" style="font-size: x-large; color: #fff;">
+                <a href="index.php">
+                    <!--<img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo"> --> LEARNTEC
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -120,7 +119,7 @@
                     <h4 class="offset-title mb-20">Contact Info</h4>
                     <p> <i class="fal fa-address-book"></i> Bangalore, Karnataka,India.</p>
                     <p> <i class="fal fa-phone"></i> +91 7975935848, +91 7204025956</p>
-                    <p> <i class="fal fa-envelope-open"></i> info@nxtecs.com </p>
+                    <p> <i class="fal fa-envelope-open"></i> info@Learntec.com </p>
                 </div>
             </div>
         </div>
@@ -184,7 +183,7 @@
                     <p></p>
                 </div>
                 <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Step into a world of exceptional digital experiences with
-                    Nxtecs!
+                    Learntec!
                     As technology continues to advance and customers demand more personalized and engaging experiences,
                     AEM will be at the forefront, enabling organizations to create, manage, and deliver. digital
                     experiences that are truly unforgettable. The future of AEM is a digital landscape where anything is
@@ -201,7 +200,7 @@
                     on a journey to create and manage amazing digital experiences that captivate your audience and drive
                     business growth. Whether you're looking to build a new website, personalize your digital
                     interactions, or migrate to the cloud, our AEM specialists will work with you every step of the way
-                    to turn your vision into a reality. With Nxtecs, you can experience the thrill of truly exceptional
+                    to turn your vision into a reality. With Learntec, you can experience the thrill of truly exceptional
                     digital experiences and elevate your business to new heights!</p>
                 <br>
 
@@ -410,7 +409,7 @@
                                     BANGALORE <br>
                                     KARNATAKA, INDIA<br><br>
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
-                                    <strong>Email:</strong> info@nxtecs.com<br>
+                                    <strong>Email:</strong> info@Learntec.com<br>
                                 </p>
 
                             </div>
@@ -474,7 +473,7 @@
                 <br>
             </div>
             <div class="container1">
-                &copy; Copyright <strong>&nbsp;<span> NXTECS </span></strong>. All rights Reserved
+                &copy; Copyright <strong>&nbsp;<span> Learntec </span></strong>. All rights Reserved
             </div>
             <!-- <div class="credits">
                      All the links in the footer should remain intact. -->
