--- a/nxtecs/devops.html
+++ b/nxtecs/devops.html
@@ -27,7 +27,7 @@
 
 
     <link rel="icon" type="image/x-icon" href="assets/img/4x/Website_Logo.png">
-    <title>DevOps || Nxtecs</title>
+    <title>DevOps || Learntec</title>
 </head>
 
 <body>
@@ -37,9 +37,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
-                        <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
-                                    alt="" /></a>
+                        <div class="logo" style="font-size: x-large; color: #002356;">
+                            <a href="index.html"><!--<img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="LEARNTEC" />--> LEARNTEC</a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -101,9 +100,9 @@
 
         <!-- offset-sidebar start -->
         <div class="offset-sidebar">
-            <div class="offset-widget offset-logo mb-30">
-                <a href="index.html">
-                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
+            <div class="offset-widget offset-logo mb-30" style="font-size: x-large; color: #fff;">
+                <a href="index.php">
+                    <!--<img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo"> --> LEARNTEC
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -120,7 +119,7 @@
                     <h4 class="offset-title mb-20">Contact Info</h4>
                     <p> <i class="fal fa-address-book"></i> Bangalore, Karnataka,India.</p>
                     <p> <i class="fal fa-phone"></i> +91 7975935848, +91 7204025956</p>
-                    <p> <i class="fal fa-envelope-open"></i> info@nxtecs.com </p>
+                    <p> <i class="fal fa-envelope-open"></i> info@Learntec.com </p>
                 </div>
             </div>
         </div>
@@ -183,7 +182,7 @@
                     <hr>
                     <p></p>
                 </div>
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Welcome to the world of DevOps with Nxtecs, where innovation
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Welcome to the world of DevOps with Learntec, where innovation
                     meets efficiency. With DevOps, companies can achieve improved agility, better collaboration, and
                     increased efficiency, allowing them to stay ahead of the competition and meet the demands of the
                     rapidly changing technology landscape. Get ready to transform the way you work with DevOps</p>
@@ -196,12 +195,12 @@
                     engage customers like never before.</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; At Nxtecs, we believe that DevOps is more than just a set of
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; At Learntec, we believe that DevOps is more than just a set of
                     processes and tools. It's a culture of collaboration, automation, and continuous improvement. Our
                     DevOps services go beyond simply automating workflows. We work closely with our clients to
                     understand their unique challenges and goals, and design custom solutions that fit their specific
                     needs. From cloud migrations to infrastructure automation, our team of experts has the skills and
-                    experience to help you achieve your objectives and stay ahead of the curve. With Nxtecs, you'll
+                    experience to help you achieve your objectives and stay ahead of the curve. With Learntec, you'll
                     receive end-to-end support and ongoing guidance, ensuring your DevOps journey is a success from
                     start to finish.</p>
                 <br>
@@ -405,7 +404,7 @@
                                     BANGALORE <br>
                                     KARNATAKA, INDIA<br><br>
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
-                                    <strong>Email:</strong> info@nxtecs.com<br>
+                                    <strong>Email:</strong> info@Learntec.com<br>
                                 </p>
 
                             </div>
@@ -468,7 +467,7 @@
                 <br>
             </div>
             <div class="container1">
-                &copy; Copyright <strong>&nbsp;<span> NXTECS </span></strong>. All rights Reserved
+                &copy; Copyright <strong>&nbsp;<span> Learntec </span></strong>. All rights Reserved
             </div>
             <!-- <div class="credits">
                      All the links in the footer should remain intact. -->
