--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Contact Us || Nxtecs </title>
+    <title>Contact Us || Learntec </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,8 +33,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
-                        <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
+                        <div class="logo" style="font-size: x-large; color: #002356;">
+                            <a href="index.html"><!--<img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="LEARNTEC" />--> LEARNTEC</a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -96,9 +96,9 @@
 
         <!-- offset-sidebar start -->
         <div class="offset-sidebar">
-            <div class="offset-widget offset-logo mb-30">
+            <div class="offset-widget offset-logo mb-30" style="font-size: x-large; color: #fff;">
                 <a href="index.php">
-                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
+                    <!--<img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo"> --> LEARNTEC
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -115,7 +115,7 @@
                     <h4 class="offset-title mb-20">Contact Info</h4>
                     <p> <i class="fal fa-address-book"></i> Bangalore, Karnataka,India.</p>
                     <p> <i class="fal fa-phone"></i> +91 7975935848, +91 7204025956</p>
-                    <p> <i class="fal fa-envelope-open"></i> info@nxtecs.com </p>
+                    <p> <i class="fal fa-envelope-open"></i> info@Learntec.com </p>
                 </div>
             </div>
         </div>
@@ -202,7 +202,7 @@
                                         </div>
                                         <div class="cta-text">
                                             <h6>Email Us</h6>
-                                            <span>info@nxtecs.com</span>
+                                            <span>info@Learntec.com</span>
                                         </div>
                                     </div>
                                 </li>
@@ -306,7 +306,7 @@
                                     BANGALORE <br>
                                     KARNATAKA, INDIA<br><br>
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
-                                    <strong>Email:</strong> info@nxtecs.com<br>
+                                    <strong>Email:</strong> info@Learntec.com<br>
                                 </p>
                                 
                             </div>
@@ -369,7 +369,7 @@
                 <br>
             </div>
             <div class="container1">
-                &copy; Copyright <strong>&nbsp;<span> NXTECS </span></strong>. All rights Reserved
+                &copy; Copyright <strong>&nbsp;<span> Learntec </span></strong>. All rights Reserved
             </div>
             <!-- <div class="credits">
                      All the links in the footer should remain intact. -->
