--- a/nxtecs/dataanalyst.html
+++ b/nxtecs/dataanalyst.html
@@ -27,7 +27,7 @@
 
 
     <link rel="icon" type="image/x-icon" href="assets/img/4x/Website_Logo.png">
-    <title>DataAnalyst || Nxtecs</title>
+    <title>DataAnalyst || Learntec</title>
 </head>
 
 <body>
@@ -37,9 +37,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
-                        <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
-                                    alt="" /></a>
+                        <div class="logo" style="font-size: x-large; color: #002356;">
+                            <a href="index.html"><!--<img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="LEARNTEC" />--> LEARNTEC</a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -101,9 +100,9 @@
 
         <!-- offset-sidebar start -->
         <div class="offset-sidebar">
-            <div class="offset-widget offset-logo mb-30">
-                <a href="index.html">
-                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
+            <div class="offset-widget offset-logo mb-30" style="font-size: x-large; color: #fff;">
+                <a href="index.php">
+                    <!--<img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo"> --> LEARNTEC
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -120,7 +119,7 @@
                     <h4 class="offset-title mb-20">Contact Info</h4>
                     <p> <i class="fal fa-address-book"></i> Bangalore, Karnataka,India.</p>
                     <p> <i class="fal fa-phone"></i> +91 7975935848, +91 7204025956</p>
-                    <p> <i class="fal fa-envelope-open"></i> info@nxtecs.com </p>
+                    <p> <i class="fal fa-envelope-open"></i> info@Learntec.com </p>
                 </div>
             </div>
         </div>
@@ -192,14 +191,14 @@
                     power of data analytics, businesses can stay ahead of the competition and achieve their goals.</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We at Nxtecs help businesses harness the power of data analytics
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We at Learntec help businesses harness the power of data analytics
                     to drive growth and achieve their goals. We offer a range of services including data analytics
                     consulting, tool and technique implementation, data visualization and reporting, training and
-                    support, and custom solution development. With its deep expertise and experience, Nxtecs can help
+                    support, and custom solution development. With its deep expertise and experience, Learntec can help
                     businesses of all sizes identify their goals and develop a strategy for using data analytics to
                     achieve those goals. We also assist with the effective collection, processing, and analysis of large
                     amounts of data, and provide meaningful insights through data visualization and reporting. By
-                    offering these services, Nxtecs helps businesses stay ahead of the competition and make informed
+                    offering these services, Learntec helps businesses stay ahead of the competition and make informed
                     decisions that drive growth.</p>
                 <br>
 
@@ -411,7 +410,7 @@
                                     BANGALORE <br>
                                     KARNATAKA, INDIA<br><br>
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
-                                    <strong>Email:</strong> info@nxtecs.com<br>
+                                    <strong>Email:</strong> info@Learntec.com<br>
                                 </p>
 
                             </div>
@@ -475,7 +474,7 @@
                 <br>
             </div>
             <div class="container1">
-                &copy; Copyright <strong>&nbsp;<span> NXTECS </span></strong>. All rights Reserved
+                &copy; Copyright <strong>&nbsp;<span> Learntec </span></strong>. All rights Reserved
             </div>
             <!-- <div class="credits">
                      All the links in the footer should remain intact. -->
