--- a/nxtecs/events.html
+++ b/nxtecs/events.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Events || Nxtecs</title>
+    <title>Events || Learntec</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.html">
@@ -30,8 +30,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
-                        <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
+                        <div class="logo" style="font-size: x-large; color: #002356;">
+                            <a href="index.html"><!--<img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="LEARNTEC" />--> LEARNTEC</a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -93,9 +93,9 @@
 
         <!-- offset-sidebar start -->
         <div class="offset-sidebar">
-            <div class="offset-widget offset-logo mb-30">
+            <div class="offset-widget offset-logo mb-30" style="font-size: x-large; color: #002356;>
                 <a href="index.php">
-                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
+                    <!--<img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo"> --> LEARNTEC
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -112,7 +112,7 @@
                     <h4 class="offset-title mb-20">Contact Info</h4>
                     <p> <i class="fal fa-address-book"></i> Bangalore, Karnataka,India.</p>
                     <p> <i class="fal fa-phone"></i> +91 7975935848, +91 7204025956</p>
-                    <p> <i class="fal fa-envelope-open"></i> info@nxtecs.com </p>
+                    <p> <i class="fal fa-envelope-open"></i> info@Learntec.com </p>
                 </div>
             </div>
         </div>
@@ -128,10 +128,10 @@
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
                         <li><a href="devops.html">Devops</a></li>
-                        <li><a href="#">AEM</a></li>
-                        <li><a href="#">Cyber Security</a></li>
-                        <li><a href="#">Python</a></li>
-                        <li><a href="#">Data Analytics</a></li>
+                        <li><a href="ae.html">AEM</a></li>
+                        <li><a href="cybersecurity.html">Cyber Security</a></li>
+                        <li><a href="python.html">Python</a></li>
+                        <li><a href="dataanalyst.html">Data Analytics</a></li>
                     </ul>
                 </li>
                 <!-- <li><a href="#">Events <i class="far fa-angle-down"></i></a>
@@ -373,7 +373,7 @@
                                     BANGALORE <br>
                                     KARNATAKA, INDIA<br><br>
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
-                                    <strong>Email:</strong> info@nxtecs.com<br>
+                                    <strong>Email:</strong> info@Learntec.com<br>
                                 </p>
                                
                             </div>
@@ -436,7 +436,7 @@
                 <br>
             </div>
             <div class="container1">
-                &copy; Copyright <strong> &nbsp;<span> NXTECS </span></strong>. All rights Reserved
+                &copy; Copyright <strong> &nbsp;<span> Learntec </span></strong>. All rights Reserved
             </div>
             <!-- <div class="credits">
                      All the links in the footer should remain intact. -->
