--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home || Nxtecs</title>
+    <title>Home || Learntec</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.html">
@@ -33,9 +33,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
-                        <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
-                                    alt="" /></a>
+                        <div class="logo" style="font-size: x-large; color: #002356;">
+                            <a href="index.html"><!--<img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="LEARNTEC" />--> LEARNTEC</a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -97,9 +96,9 @@
 
         <!-- offset-sidebar start -->
         <div class="offset-sidebar">
-            <div class="offset-widget offset-logo mb-30">
+            <div class="offset-widget offset-logo mb-30" style="font-size: x-large; color: #fff;">
                 <a href="index.php">
-                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
+                    <!--<img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo"> --> LEARNTEC
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -116,7 +115,7 @@
                     <h4 class="offset-title mb-20">Contact Info</h4>
                     <p> <i class="fal fa-address-book"></i> Bangalore, Karnataka,India.</p>
                     <p> <i class="fal fa-phone"></i> +91 7975935848, +91 7204025956</p>
-                    <p> <i class="fal fa-envelope-open"></i> info@nxtecs.com </p>
+                    <p> <i class="fal fa-envelope-open"></i> info@Learntec.com </p>
                 </div>
             </div>
         </div>
@@ -170,7 +169,7 @@
                                     <div class="hero-slider-caption">
                                         <span data-animation="fadeInUp" data-delay=".5s"><i
                                                 class="fal fa-ellipsis-h"></i>
-                                            Welcome to Nxtecs,</span>
+                                            Welcome to Learntec,</span>
                                         <h2 class="mb-45" data-animation="fadeInUp" data-delay=".7s"
                                             style="font-size: 40px;">
                                             Where you find 100’s of opportunities everyday..
@@ -842,7 +841,7 @@
                                         BANGALORE <br>
                                         KARNATAKA, INDIA<br><br>
                                         <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
-                                        <strong>Email:</strong> info@nxtecs.com<br>
+                                        <strong>Email:</strong> info@Learntec.com<br>
                                     </p>
 
                                 </div>
@@ -907,7 +906,7 @@
                     <br>
                 </div>
                 <div class="container1">
-                    &copy; Copyright <strong> &nbsp;<span> NXTECS </span></strong>. All rights Reserved
+                    &copy; Copyright <strong> &nbsp;<span> Learntec </span></strong>. All rights Reserved
                 </div>
         </div>
         <!-- <div class="credits">
