--- a/nxtecs/python.html
+++ b/nxtecs/python.html
@@ -27,7 +27,7 @@
 
 
     <link rel="icon" type="image/x-icon" href="assets/img/4x/Website_Logo.png">
-    <title>Python || Nxtecs</title>
+    <title>Python || Learntec</title>
 </head>
 
 <body>
@@ -37,9 +37,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
-                        <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
-                                    alt="" /></a>
+                        <div class="logo" style="font-size: x-large; color: #002356;">
+                            <a href="index.html"><!--<img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="LEARNTEC" />--> LEARNTEC</a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -101,9 +100,9 @@
 
         <!-- offset-sidebar start -->
         <div class="offset-sidebar">
-            <div class="offset-widget offset-logo mb-30">
-                <a href="index.html">
-                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
+            <div class="offset-widget offset-logo mb-30" style="font-size: x-large; color: #fff;">
+                <a href="index.php">
+                    <!--<img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo"> --> LEARNTEC
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -120,7 +119,7 @@
                     <h4 class="offset-title mb-20">Contact Info</h4>
                     <p> <i class="fal fa-address-book"></i> Bangalore, Karnataka,India.</p>
                     <p> <i class="fal fa-phone"></i> +91 7975935848, +91 7204025956</p>
-                    <p> <i class="fal fa-envelope-open"></i> info@nxtecs.com </p>
+                    <p> <i class="fal fa-envelope-open"></i> info@Learntec.com </p>
                 </div>
             </div>
         </div>
@@ -190,11 +189,11 @@
                     into their technology stack</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nxtecs is the bridge connecting businesses with the limitless
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Learntec is the bridge connecting businesses with the limitless
                     potential of python. We provide an array of services, ranging from python consulting to custom
                     application development and everything in between. Our expertise allows us to help businesses
                     automate tasks, build custom web applications, harness data science and machine learning, and
-                    integrate with other systems. At Nxtecs we equip businesses with the knowledge and skills they need
+                    integrate with other systems. At Learntec we equip businesses with the knowledge and skills they need
                     to take their python capabilities to new heights. We are more than just a service provider, we are a
                     catalyst for growth and success, to help you unleash the limitless potential of python and conquer
                     the future for your business...</p>
@@ -406,7 +405,7 @@
                                     BANGALORE <br>
                                     KARNATAKA, INDIA<br><br>
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
-                                    <strong>Email:</strong> info@nxtecs.com<br>
+                                    <strong>Email:</strong> info@Learntec.com<br>
                                 </p>
 
                             </div>
@@ -469,7 +468,7 @@
                 <br>
             </div>
             <div class="container1">
-                &copy; Copyright <strong>&nbsp;<span> NXTECS </span></strong>. All rights Reserved
+                &copy; Copyright <strong>&nbsp;<span> Learntec </span></strong>. All rights Reserved
             </div>
             <!-- <div class="credits">
                      All the links in the footer should remain intact. -->
