--- a/nxtecs/registration.html
+++ b/nxtecs/registration.html
@@ -27,7 +27,7 @@
 
 
     <link rel="icon" type="image/x-icon" href="assets/img/4x/Website_Logo.png">
-    <title>Register || Nxtecs</title>
+    <title>Register || Learntec</title>
 </head>
 
 <body>
