--- a/nxtecs/events.html
+++ b/nxtecs/events.html
@@ -414,7 +414,7 @@
                         <div class="col-lg-4 col-md-6 footer-newsletter">
                             <br>
                             <h4>Mail us Here</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
+                            <p>Are you  interested in learning more about the training programs and courses offered by us..</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email">
                                 <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i class="far fa-paper-plane"></i></button>
