--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -243,48 +243,48 @@
             <div class="container">
                 <div class="counter-bg">
                     <div class="row">
-                        <div class="col-xl-3 col-lg-3 col-md-6">
+                       <!-- <div class="col-xl-3 col-lg-3 col-md-6">
                             <div class="counter-wrapper mb-30">
                                 <div class="counter-icon f-left">
                                     <i class="fal fa-users"></i>
                                 </div>
                                 <div class="counter-text">
-                                    <!--<h1><span class="counter">3045</span>+</h1>-->
+                                    <h1><span class="counter">3045</span>+</h1>
 
                                     <span style="line-height: 2.5;">24/7 support </span>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6">
+                        </div> -->
+                        <div class="col-xl-4 col-lg-4 col-md-6">
                             <div class="counter-wrapper mb-30">
                                 <div class="counter-icon f-left">
-                                    <i class="fal fa-books"></i>
+                                    <i class="fal fa-books" style="padding-left: 40px;"></i>
                                 </div>
                                 <div class="counter-text">
                                     <!--<h1><span class="counter">365</span>+</h1>-->
-                                    <span style="line-height: 2.5;">Capstone projects</span>
+                                    <span style="line-height: 2.5; padding-left: 20px;">Capstone projects</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6">
+                        <div class="col-xl-4 col-lg-4 col-md-6">
                             <div class="counter-wrapper mb-30">
                                 <div class="counter-icon f-left">
-                                    <i class="fal fa-graduation-cap"></i>
+                                    <i class="fal fa-graduation-cap" style="padding-left: 40px;"></i>
                                 </div>
                                 <div class="counter-text">
                                     <!--<h1><span class="counter">200</span>+</h1>-->
-                                    <span style="line-height: 2.5;">Placement assistance</span>
+                                    <span style="line-height: 2.5; padding-left: 20px;">Placement assistance</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6">
+                        <div class="col-xl-4 col-lg-4 col-md-6">
                             <div class="counter-wrapper mb-30">
                                 <div class="counter-icon f-left">
-                                    <i class="fal fa-laptop-code"></i>
+                                    <i class="fal fa-laptop-code" style="padding-left: 40px;"></i>
                                 </div>
                                 <div class="counter-text">
                                     <!--<h1><span class="counter">100</span>+</h1>-->
-                                    <span style="line-height: 2.5;">Interactive classes</span>
+                                    <span style="line-height: 2.5; padding-left: 20px;">Interactive classes</span>
                                 </div>
                             </div>
                         </div>
@@ -680,7 +680,7 @@
                         <div class="col-lg-4 col-md-6 footer-newsletter">
                             <br>
                             <h4>Mail us Here</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
+                            <p>Are you  interested in learning more about the training programs and courses offered by us..</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email" style="width: 100%; height: 50px;">
                                 <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
