--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -347,7 +347,7 @@
                         <div class="col-lg-4 col-md-6 footer-newsletter">
                             <br>
                             <h4>Mail us Here</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
+                            <p>Are you  interested in learning more about the training programs and courses offered by us..</p>
                             <form action="" method="post" style="display: flex; width: 100%;">
                                 <input type="email" name="email" style="width: 100%; height: 50px;">
                                 <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
