--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -26,6 +26,9 @@
 </head>
 
 <body>
+    <a href="#" class="float"> <img src="./whatsapp.png" alt="">
+        <!-- <i class="fa fa-whatsapp my-float"></i> -->
+         </a>
     <!-- header-start -->
     <header class="header-transparent">
         <div id="sticky-header" class="main-menu-area menu-padding pl-55 pr-55">
