--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -609,7 +609,7 @@
                         <div class="team-wrapper mb-30">
                             <div class="team-img pos-rel">
                                 <div class="fix">
-                                    <img src="assets/img/team/shetty.png" alt="">
+                                    <img src="assets/img/team/shetty.webp" alt="">
                                 </div>
                                 <div class="team-02-icon">
                                     <div class="inner-team-icon pos-rel">
