--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -435,6 +435,29 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-xl-3 col-lg-3 col-md-6">
+                        <div class="team-wrapper mb-30 img-thumbnail">
+                            <div class="team-img pos-rel">
+                                <div class="fix">
+                                    <img src="assets/img/team/shetty.webp" alt="">
+                                </div>
+                                <div class="team-02-icon">
+                                    <div class="inner-team-icon pos-rel">
+                                        <div class="team-icon">
+                                            <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                            <a class="google" href="#"><i class="fab fa-youtube"></i></a>
+                                            <a class="fb" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </div>
+                                        <a href="#"><i class="fal fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-text">
+                                <h4 class="text_align"><a href="">Pavan Shetty</a></h4>
+
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
