--- a/learntec/index.html
+++ b/learntec/index.html
@@ -418,7 +418,7 @@
                 <div class="lg-btn1 lg-btn-03 text-center">
                     <a class="c-btn" style="background-color: #ffffff; height: 75px; color: rgb(16, 15, 15); padding-top: 18px; border-radius: 10px; font-size:  22px; padding: 10px;"
                         href="dataanalyst.html"> <img src="./analytics.png" style="height: 45px; width: 45px; " alt=""> DATA  ANALYTICS</a>
-                </div>  &nbsp; &nbsp;&nbsp;
+                </div> 
 
             </div>
         </marquee>
