--- a/learntec/index.html
+++ b/learntec/index.html
@@ -677,7 +677,7 @@
                                 <div class="team-02-icon">
                                     <div class="inner-team-icon pos-rel">
                                         <div class="team-icon">
-                                            <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                            <a class="twitter" href="#"><img src="Instagram-Splash-Icon-PNG-S-09idfd.png" alt="" style="height: 33px; width: 33px;"></a>
                                             <a class="google" href="#"><i class="fab fa-youtube"></i></a>
                                             <a class="fb" href="#"><i class="fab fa-facebook-f"></i></a>
                                         </div>
